--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Country\CountryFilter.cs" />
     <Compile Include="DataRetrieval\RemoteExcelResult.cs" />
     <Compile Include="EntityFilterEffectiveMode.cs" />
+    <Compile Include="SalutationTypeEnum.cs" />
+    <Compile Include="GenderTypeEnum.cs" />
     <Compile Include="GenericLKUP\GenericLKUPDefinitionConfig.cs" />
     <Compile Include="GenericLKUP\GenericLKUPDefinitionExtendedSettings.cs" />
     <Compile Include="GenericLKUP\GenericLKUPItem.cs" />
