--- a/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
+++ b/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountType.cs" />
-    <Compile Include="AddressTypes.cs" />
+    <Compile Include="AddressType.cs" />
     <Compile Include="InvoiceDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RDLCInvoiceDetails.cs" />
