--- a/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
+++ b/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
@@ -121,7 +121,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Retail_MultiNet\Directives\Account\Part\Runtime\Templates\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -134,10 +133,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Retail_MultiNet\Constant\AccountTypeEnum.js" />
+    <Content Include="Retail_MultiNet\Constant\AddressTypeEnum.js" />
     <Content Include="Retail_MultiNet\Constant\ModuleConfig.js" />
+    <Content Include="Retail_MultiNet\Directives\AddressType\retail-multinet-addresstype-selector.js" />
+    <Content Include="Retail_MultiNet\Directives\AccountType\retail-multinet-accounttype-selector.js" />
     <Content Include="Retail_MultiNet\Directives\Account\Part\Definition\retail-multinet-accounttype-part-definition-companyextendedinfo.js" />
     <Content Include="Retail_MultiNet\Directives\Account\Part\Definition\Templates\AccountTypePartCompanyExtendedInfoDefinitionTemplate.html" />
     <Content Include="Retail_MultiNet\Directives\Account\Part\Runtime\retail-multinet-accounttype-part-runtime-companyextendedinfo.js" />
+    <Content Include="Retail_MultiNet\Directives\Account\Part\Runtime\Templates\AccountTypePartCompanyExtendedInfoRuntimeTemplate.html" />
     <Content Include="Retail_MultiNet\Elements\Invoice\Directives\retail-multinet-account-invoice-selector.js" />
     <Content Include="Retail_MultiNet\Elements\Invoice\Directives\retail-invoice-invoicetype-multinetsubscriberinvoicesettings.js" />
     <Content Include="Retail_MultiNet\Elements\Invoice\Directives\Templates\MultiNetnvoiceSettingsTemplate.html" />
