--- a/Retail/Code/Retail.MultiNet.MainExtensions/Retail.MultiNet.MainExtensions.csproj
+++ b/Retail/Code/Retail.MultiNet.MainExtensions/Retail.MultiNet.MainExtensions.csproj
@@ -61,8 +61,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Convertors\SubscriberConvertor.cs" />
+    <Compile Include="Convertors\BranchConvertor.cs" />
     <Compile Include="Convertors\CompanyConvertor.cs" />
+    <Compile Include="MultiNetBranchExtendedInfo.cs" />
     <Compile Include="MultiNetCompanyExtendedInfo.cs" />
+    <Compile Include="MultiNetBranchExtendedInfoDefinition.cs" />
     <Compile Include="MultiNetCompanyExtendedInfoDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
