--- a/Retail/Code/Retail.Runtime/Retail.Runtime.csproj
+++ b/Retail/Code/Retail.Runtime/Retail.Runtime.csproj
@@ -663,6 +663,18 @@
       <Project>{324f5b0b-84e3-403f-9b0b-a53eb997c941}</Project>
       <Name>Retail.Invoice.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Retail.MultiNet.Business\Retail.MultiNet.Business.csproj">
+      <Project>{b72910b9-b085-4a14-8bb7-816d0a28a6b9}</Project>
+      <Name>Retail.MultiNet.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Retail.MultiNet.Entities\Retail.MultiNet.Entities.csproj">
+      <Project>{73608c81-84ad-480a-a988-74244ee9c8f8}</Project>
+      <Name>Retail.MultiNet.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Retail.MultiNet.MainExtensions\Retail.MultiNet.MainExtensions.csproj">
+      <Project>{ddebca68-714f-4334-9b05-55476145dec8}</Project>
+      <Name>Retail.MultiNet.MainExtensions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Retail.Teles.Business\Retail.Teles.Business.csproj">
       <Project>{96171ed5-87c9-42c6-b052-38d788c63192}</Project>
       <Name>Retail.Teles.Business</Name>
