--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
@@ -190,6 +190,8 @@
     <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\Outbound\RateCalcMethod\vr-whs-deal-swapdealanalysis-ratecalcmethod-outbound-fixed-editor.js" />
     <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\Outbound\RateCalcMethod\vr-whs-deal-swapdealanalysis-ratecalcmethod-outbound-suppliers-editor.js" />
     <Content Include="WhS_Deal\Directives\Extensions\SwapDealAnalysis\Outbound\RateCalcMethod\vr-whs-deal-swapdealanalysis-ratecalcmethod-outbound-suppliers-itemeditor.js" />
+    <Content Include="WhS_Deal\Directives\QueueActivators\Templates\QueueActivatorEvaluateDealTemplate.html" />
+    <Content Include="WhS_Deal\Directives\QueueActivators\vr-whs-deal-queueactivator-evaluatedeal.js" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealAnalysisInboundSettingsEditorTemplate.html" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealAnalysisOutboundSettingsEditorTemplate.html" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealSettingsEditorTemplate.html" />
