--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -85,6 +85,7 @@
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
   </appSettings>
 
   <vanriseLogging maxLogLevel="Information">
