--- a/NetworkProvisioning/Code/NP.IVSwitch.Business/NP.IVSwitch.Business.csproj
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Business/NP.IVSwitch.Business.csproj
@@ -66,12 +66,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.GenericData.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Vanrise.GenericData.Business">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Business.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.GenericData.Entities">
@@ -105,6 +108,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="IPAddressExtensions.cs" />
     <Compile Include="IpAddressHelper.cs" />
+    <Compile Include="LiveCdrManager.cs" />
     <Compile Include="MappingRuleHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteManager.cs" />
