implementing multinet invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41768

--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -77,6 +77,7 @@
     <Compile Include="BusinessManagers\IInvoiceSettingManager.cs" />
     <Compile Include="InvoiceSetting\InvoiceSettingsViewSettings.cs" />
     <Compile Include="InvoiceType\Configs\AutomaticInvoiceSettingsConfig.cs" />
+    <Compile Include="InvoiceType\Configs\ItemSetNameStorageRuleConfig.cs" />
     <Compile Include="InvoiceType\ConvertToGridColumnAttributeInput.cs" />
     <Compile Include="InvoiceType\EmailActionAttachment.cs" />
     <Compile Include="InvoiceType\IInvoiceActionContext.cs" />
