--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InvoiceAccountStatusChangedHandler.cs" />
+    <Compile Include="MultiNetPartnerCondition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MultiNetSubscriberInvoiceGenerator.cs" />
     <Compile Include="MultiNetSubscriberInvoiceSettings.cs" />
