--- a/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
+++ b/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
@@ -47,8 +47,10 @@
     <Compile Include="AddressType.cs" />
     <Compile Include="InvoiceDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RDLCBranchSummaryDetails.cs" />
     <Compile Include="RDLCInvoiceDetails.cs" />
-    <Compile Include="RDLCSummaryInvoiceItemDetails.cs" />
+    <Compile Include="RDLCBranchSummaryItemDetails.cs" />
+    <Compile Include="RDLCMultiNetCDRDetails.cs" />
     <Compile Include="RDLCUsageSummaryInvoiceItemDetails.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
