Adding DealReprocessInput Entity, DataManager and Manager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41780

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Business/TOne.WhS.Deal.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Business/TOne.WhS.Deal.Business.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Context\SwapDealAnalysisInboundRateCalcMethodContext.cs" />
     <Compile Include="Context\SwapDealAnalysisOutboundRateCalcMethodContext.cs" />
+    <Compile Include="DealReprocessInputManager.cs" />
     <Compile Include="SwapDeals\RouteRules\SwapDealBuyRouteRuleManager.cs" />
     <Compile Include="SwapDeals\SwapDealRouteBuildInterceptor.cs" />
     <Compile Include="VolCommitmentDealManager.cs" />
