--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data/TOne.WhS.Deal.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data/TOne.WhS.Deal.Data.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IDealDetailedProgressDataManager.cs" />
     <Compile Include="IDealProgressDataManager.cs" />
     <Compile Include="IDealDataManager.cs" />
+    <Compile Include="IDealReprocessInputDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
