--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DealDefinition\DealEntities.cs" />
     <Compile Include="DealProgress\DealDetailedProgress.cs" />
     <Compile Include="DealProgress\DealProgress.cs" />
+    <Compile Include="DealReprocessInput\DealReprocessInput.cs" />
     <Compile Include="DealSaleZoneGroup.cs" />
     <Compile Include="DealSupplierZoneGroup.cs" />
     <Compile Include="Settings\SwapDealTechnicalSettingData.cs" />
