--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data.SQL/TOne.WhS.Deal.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data.SQL/TOne.WhS.Deal.Data.SQL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DealDetailedProgressDataManager.cs" />
     <Compile Include="DealProgressDataManager.cs" />
     <Compile Include="DealDataManager.cs" />
+    <Compile Include="DealReprocessInputDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
