--- a/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
+++ b/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Retail_MultiNet\Reports\CDRSubscriberInvoiceItemsReport.rdlc" />
+    <EmbeddedResource Include="Retail_MultiNet\Reports\CompanyBranchReport.rdlc" />
     <EmbeddedResource Include="Retail_MultiNet\Reports\SubscriberInvoiceItemsReport.rdlc" />
     <EmbeddedResource Include="Retail_MultiNet\Reports\CompanySubscriberInvoiceReport.rdlc" />
     <EmbeddedResource Include="Retail_MultiNet\Reports\BranchSubscriberInvoiceReport.rdlc" />
