implementing code comparesion page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41793

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -71,6 +71,8 @@
     <Compile Include="BulkActions\Enums.cs" />
     <Compile Include="BulkActions\GetZoneItemsInput.cs" />
     <Compile Include="CodeComparison\CodeCompareItem.cs" />
+    <Compile Include="CodeComparison\CodeCompareItemDetail.cs" />
+    <Compile Include="CodeComparison\CodeCompareQuery.cs" />
     <Compile Include="ImportRatePlan\ImportedRowValidationInput.cs" />
     <Compile Include="ImportRatePlan\ImportedRowValidationResult.cs" />
     <Compile Include="ImportRatePlan\InvalidImportedRow.cs" />
