--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -118,6 +118,7 @@
     <Compile Include="BusinessRules\Conditions\SPDefaultRPDoesNotExistCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ZoneCountryIsEndedAndZoneIsChangedCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ZoneIsPendingClosedAndChangedCondition.cs" />
+    <Compile Include="CodeCompareManager.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="Context\RatePlanContext.cs" />
     <Compile Include="Country\BulkActionApplicableToCountryContext.cs" />
