--- a/Vanrise/Code/Vanrise.HelperTools/Vanrise.HelperTools.csproj
+++ b/Vanrise/Code/Vanrise.HelperTools/Vanrise.HelperTools.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataManager\HelperToolDataManager.cs" />
+    <Compile Include="ECMAScriptPacker.cs" />
     <Compile Include="EncryptDecryptForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +81,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Packer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParseMaster.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TraceBCPCommand.cs">
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Packer.resx">
+      <DependentUpon>Packer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
