--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -265,8 +265,10 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceAttachments\Templates\InvoiceAttachmentsTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceAttachments\Templates\InvoiceAttachmentEditor.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceAttachments\vr-invoicetype-invoiceattachments.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\Templates\LastInvoicesDataSourceSettings.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\Templates\ItemGroupingDataSourceSettings.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\Templates\TaxesDataSourceSettings.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-lastinvoices.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-taxes.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-itemgrouping.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceExtendedSettings\vr-invoicetype-extendedsettings.js" />
