Refactored the workflow of the account balance module to handle account usage overriding and deleted billing transactions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41806

--- a/Vanrise/Code/Vanrise.AccountBalance.Data/Vanrise.AccountBalance.Data.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Data/Vanrise.AccountBalance.Data.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="AccountBalanceDataManagerFactory.cs" />
     <Compile Include="IAccountUsageDataManager.cs" />
+    <Compile Include="IAccountUsageOverrideDataManager.cs" />
     <Compile Include="IBalanceHistoryDataManager.cs" />
     <Compile Include="IBalanceUsageQueueDataManager.cs" />
     <Compile Include="IBillingTransactionDataManager.cs" />
