--- a/Vanrise/Code/Vanrise.AccountBalance.Data.SQL/Vanrise.AccountBalance.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Data.SQL/Vanrise.AccountBalance.Data.SQL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="BillingTransactionDataManager.cs" />
     <Compile Include="BillingTransactionTypeDataManager.cs" />
     <Compile Include="ClosingPeriodDataManager.cs" />
+    <Compile Include="AccountUsageOverrideDataManager.cs" />
     <Compile Include="LiveBalanceDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
