MultiNet Invoices : (By Samer)
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41807

--- a/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
+++ b/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
@@ -159,6 +159,9 @@
     <EmbeddedResource Include="Retail_MultiNet\Reports\SubscriberInvoiceItemsReport.rdlc" />
     <EmbeddedResource Include="Retail_MultiNet\Reports\CompanySubscriberInvoiceReport.rdlc" />
     <EmbeddedResource Include="Retail_MultiNet\Reports\BranchSubscriberInvoiceReport.rdlc" />
+    <EmbeddedResource Include="Retail_MultiNet\Reports\test.rdlc">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Retail.MultiNet.Entities\Retail.MultiNet.Entities.csproj">
