--- a/Vanrise/Code/Vanrise.AccountBalance.Web/Vanrise.AccountBalance.Web.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/Vanrise.AccountBalance.Web.csproj
@@ -217,6 +217,8 @@
     <Content Include="VR_AccountBalance\Directives\MainExtensions\BalanceAlertRule\vr-accountbalance-accountbalancerule-settings.js" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\BillingTransaction\Templates\BillingTransactionSynchronizer.html" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\BillingTransaction\vr-accountbalance-billingtransaction-synchronizer.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\InvoiceDataSourceSettings\Templates\BillingTransactionDataSource.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\InvoiceDataSourceSettings\vr-invoicetype-datasourcesettings-billingtransaction.js" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\QueueActivators\Templates\QueueActivatorUpdateAccountBalancesTemplate.html" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\QueueActivators\vr-accountbalance-queueactivator-updateaccountbalances.js" />
     <Content Include="VR_AccountBalance\Directives\ProcessInput\Normal\Templates\AccountBalanceUpdateProcessManualTemplate.html" />
