WebBI.config.exclude
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41812

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -608,6 +608,7 @@
     <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\PublishTOneV2.pubxml" />
     <Content Include="Web.config.CloudXPoint.exclude" />
+    <Content Include="WebBI.config.exclude" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
